--- a/public/500.html
+++ b/public/500.html
@@ -1,25 +1,130 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
-</head>
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="description" content="CloudSpokes matches companies who need cloud development expertise with a worldwide crowdsourced community of 74,667 cloud experts.">    
+      <title>CloudSpokes - Crowdsourcing Development Community</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="/assets/favicon.png" />
+
+    <!-- styles -->
+    <link href="/assets/application-3c9e949c83fca9d5ba2b0f098c5d94d1.css" media="screen" rel="stylesheet" type="text/css" />
+
+</head>
 <body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-  </div>
+
+
+  <!-- NAVBAR
+      ================================================== -->
+  <div class="nav-wrapper">
+      <div class="container">
+
+          <a href="/" class="logo"><img alt="Logo" src="http://cs-public.s3.amazonaws.com/error-pages/logo.png" /></a>
+
+          <ul class="nav">
+              <li><a href="/community">COMMUNITY</a></li>
+              <li><a href="/challenges">CHALLENGES</a></li>
+              <li><a href="/leaderboard">LEADERBOARD</a></li>
+              <li><a href="/badges">BADGES</a></li>
+              <li><a href="http://blog.cloudspokes.com">BLOG</a></li>
+              <li><a href="/help">HELP</a></li>
+              <li><a href="/forums">FORUMS</a></li>              
+          </ul>
+
+      </div> <!-- /.container -->
+  </div><!-- /.nav-wrapper -->
+
+  <!-- CONTENT
+            ================================================== -->
+    <div class="content-wrapper">
+        <div class="container">
+
+          <div class="title"><h1>SOMETHING BAD HAPPENED!</h1></div>
+
+          <div class="row-fluid">
+
+            <div class="span2"></div>
+
+            <div class="span4">
+              <img alt="Something-went-wrong" src="http://cs-public.s3.amazonaws.com/error-pages/something-went-wrong.jpg" />
+            </div>
+
+            <div class="span4">
+              <p><br/>Unfortunately, we were unable to complete your last action. This was probably due to a malformed request, server error or the coming zombie apocalypse.</p>
+              <p>You can try hitting the back button and attempting the action again or perhaps you'd like to visit our <a href="/">home page</a> or <a href="/challenges">list of open challenges</a>?</p>
+            </div>  
+
+          </div>
+
+        </div> <!-- /.container -->
+    </div><!-- /.loginbar-wrapper -->
+
+
+  <!-- FOOTER
+          ================================================== -->
+  <div class="footer-wrapper">
+      <div class="container">
+
+          <div class="row-fluid">
+              <div class="pull-left">
+                  <h2>MAIN LINKS</h2>
+                  <ul class="links">
+                      <li><a href="/">Home</a></li>
+                      <li><a href="/what-we-do">What We Do</a></li>
+                      <li><a href="/how-it-works">How It Works</a></li>
+                      <li><a href="/about">About Us</a></li>
+                      <li><a href="http://blog.cloudspokes.com">Blog</a></li>
+                      <li><a href="/privacy">Privacy &amp; Terms</a></li>
+                      <li><a href="/contact">Contact Us</a></li>
+                  </ul>
+              </div>
+
+              <div class="pull-left">
+                  <h2>MEMBER LINKS</h2>
+                  <ul class="links">
+                      <li><a href="/community">Community</a></li>
+                      <li><a href="/challenges">Challenges</a></li>
+                      <li><a href="/leaderboard">Leaderboard</a></li>
+                      <li><a href="/badges">Badges</a></li>
+                      <li><a href="/faq">FAQ</a></li>
+                      <li><a href="/help">Help</a></li>
+                      <li><a href="/forums">Forums</a></li>
+                  </ul>
+              </div>
+
+              <div class="pull-left">
+                  <h2>SPOKES</h2>
+                  <ul class="links">
+                      <li><a href="http://mesh01.cloudspokes.com">MESH01</a></li>
+                      <li><a href="http://smartsheet.cloudspokes.com">Smartsheet</a></li>
+                  </ul>
+              </div>
+
+              <div class="pull-right">
+                  <ul class="links">
+                      <li><a href="https://plus.google.com/u/1/communities/115902133021389200378" class="circle-orange" target="_blank"><span class="googleplus-small">google+</span></a></li>
+                      <li><a href="http://www.facebook.com/CloudSpokes" class="circle-orange" target="_blank"><span class="facebook">facebook</span></a></li>
+                      <li><a href="https://twitter.com/cloudspokes" class="circle-orange" target="_blank"><span class="twitter">twitter</span></a></li>
+                      <li><a href="http://www.linkedin.com/groups/CloudSpokes-3876560" class="circle-orange" target="_blank"><span class="linkedin">linkedin</span></a></li>
+                  </ul>
+              </div>
+
+              <div class="span3 pull-right">
+                  <h2>PLATFORMS</h2>
+                  <ul class="links">
+                      <li><a href="http://aws.amazon.com" target="_blank">Amazon Web Services</a></li>
+                      <li><a href="http://www.cloudfoundry.com" target="_blank">Cloud Foundry</a></li>
+                      <li><a href="https://cloud.google.com" target="_blank">Google App Engine</a></li>
+                      <li><a href="http://www.heroku.com" target="_blank">Heroku</a></li>
+                      <li><a href="http://developer.force.com" target="_blank">Force.com</a></li>
+                  </ul>
+              </div>
+
+          </div>
+
+      </div> <!-- /.container -->
+  </div><!-- /.loginbar-wrapper -->
+    
 </body>
 </html>
